<resources>
    <string name="app_name">HouseOnPlam</string>
    <string name="search_brokers">Search brokers</string>
    <string name="title_home">Home</string>
    <string name="title_brokers">Brokers</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_calculator">Calculator</string>
    <string name="title_more">More</string>
    <string name="listing_image">Listing Image</string>
    <string name="listing_price">Listing Price</string>
    <string name="listing_address">Listing Address</string>
    <string name="house_image_desc">House Image Description</string>
    <string name="house_price_placeholder">House Price</string>
    <string name="house_address_placeholder">House Address</string>
</resources>
